--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <div class="max-w-[1170px] mx-auto px-4 sm:px-8 xl:px-0 lg:flex items-center justify-between relative">
             <div class="w-full lg:w-1/4 flex items-center justify-between">
                 <a href="index.html">
-                    <img src="images/logo/logo.png" alt="Logo" />
+                    <img src="images/logo/logoheader.png" alt="Logo" />
                 </a>
 
                 <!-- Hamburger Toggle BTN -->
@@ -1017,7 +1017,7 @@
                                 Lorem Ipsum is simply dummy text of the printing and
                                 typesetting industry. Lorem Ipsum has been the industry's.
                             </p>
-                            
+
                             <!-- bg shapes -->
                             <div class="absolute -z-10 pointer-events-none inset-0 overflow-hidden">
                                 <span class="absolute right-0 bottom-0 -z-1">
@@ -2248,7 +2248,7 @@
         </section>
         <!-- ====== Newsletter Section End -->
     </main>
-      <!-- ===== Footer Start ===== -->
+    <!-- ===== Footer Start ===== -->
     <!-- ====== Footer Section Start -->
     <footer class="relative z-10 pb-17.5 lg:pb-22.5 xl:pb-27.5">
         <!-- bg shapes -->
@@ -2270,7 +2270,7 @@
             <div class="flex flex-wrap justify-between">
                 <div class="mb-10 max-w-[571px] w-full">
                     <a class="mb-8.5 inline-block" href="index.html">
-                        <img src="images/logo/logo.png" width="300px" alt="Logo" />
+                        <img src="images/logo/logo1.png" width="300px" alt="Logo" />
                     </a>
 
                     <p class="mb-12 xl:w-4/5">
@@ -2278,16 +2278,20 @@
                     </p>
 
                     <div class="flex items-center gap-5">
-                        <a href="https://www.instagram.com/_creativa.des" target="_blank" class="hover:text-white ease-in duration-300">
+                        <a href="https://www.instagram.com/_creativa.des" target="_blank"
+                            class="hover:text-white ease-in duration-300">
                             <img src="footer-icons/instagram.svg" width="25px" alt="instagram">
                         </a>
-                        <a href="https://www.tiktok.com/@_creativa.desi" target="_blank" class="hover:text-white ease-in duration-300">
+                        <a href="https://www.tiktok.com/@_creativa.desi" target="_blank"
+                            class="hover:text-white ease-in duration-300">
                             <img src="footer-icons/tiktok-brands-solid.svg" width="25px" alt="tiktik">
                         </a>
-                        <a href="https://www.facebook.com/creativa.agency" target="_blank" class="hover:text-white ease-in duration-300">
+                        <a href="https://www.facebook.com/creativa.agency" target="_blank"
+                            class="hover:text-white ease-in duration-300">
                             <img src="footer-icons/facebook-f-brands-solid.svg" width="18px" alt="facebook">
                         </a>
-                        <a href="https://www.behance.net/creativa_des" target="_blank" class="hover:text-white ease-in duration-300">
+                        <a href="https://www.behance.net/creativa_des" target="_blank"
+                            class="hover:text-white ease-in duration-300">
                             <img src="footer-icons/behance-brands-solid.svg" width="30px" alt="behance">
                         </a>
                     </div>
@@ -2327,7 +2331,8 @@
                                         class="font-medium ease-in duration-300 hover:text-white">Our Team</a>
                                 </li>
                                 <li>
-                                    <a href="mailto:creativa589@gmail.com" class="font-medium ease-in duration-300 hover:text-white">Work With Us</a>
+                                    <a href="mailto:creativa589@gmail.com"
+                                        class="font-medium ease-in duration-300 hover:text-white">Work With Us</a>
                                 </li>
                                 <li>
                                     <a href="#support"
@@ -2355,7 +2360,8 @@
                                         class="font-medium ease-in duration-300 hover:text-white">FAQ</a>
                                 </li>
                                 <li>
-                                    <a href="linkstree/socialmedia.html" class="font-medium ease-in duration-300 hover:text-white">Links Tree</a>
+                                    <a href="linkstree/socialmedia.html"
+                                        class="font-medium ease-in duration-300 hover:text-white">Links Tree</a>
                                 </li>
 
                             </ul>
